# AI-Powered-Stock-Prediction-Platform

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  secret.yml
data/: cash_flow.csv  company_overview.csv  quarterly_earnings.csv  stock_weekly_data.csv
rag_demo/: company_info_query_engine.py  config_utils.py  pandas_data_analyzer.py  query_router.py  vector_store_generator.py
stock_api/: graphql_api.py  graphql_models.py  graphql_schema.py  rest_api.py
unified_api/: unified_api_server.py
